<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.federate</groupId>
  <artifactId>federate</artifactId>
  <packaging>pom</packaging>
  <name>Federate</name>
  <version>0.0.1-SNAPSHOT</version>
  <description>Federated SQL and XML query engine.</description>
  <licenses>
    <license>
      <name>GNU Lesser General Public License</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Steve Hawkins</name>
      <id>steve</id>
      <email>shawkins@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Project Lead</role>
      </roles>
      <timezone>-6</timezone>
    </developer>
    <developer>
      <name>Ramesh Reddy</name>
      <id>ramesh</id>
      <email>rareddy@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Project Lead</role>
      </roles>
      <timezone>-6</timezone>
    </developer>
  </developers>
  <build>
	<!-- This section defines the default plugin settings inherited by child projects. -->
    <pluginManagement>
      <plugins>
		<!-- Fixes how test resources of a project can be used in projects dependent on it  -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
	  <!-- Specify the compiler options and settings -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showDeprecation>false</showDeprecation>
          <showWarnings>false</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <forkMode>once</forkMode>
          <argLine>-XX:MaxPermSize=128m</argLine>
          <includes>
            <include>**/*TestCase.java</include>
            <include>**/*Test.java</include>
            <include>**/Test*.java</include>
          </includes>
          <excludes>
            <exclude>**/Abstract*TestCase.java</exclude>
			<!-- hack to prevent anonymous inner classes in Tests from being run as tests -->
            <include>**/Test*$*.java</include>
          </excludes>
          <systemProperties>
            <property>
              <name>java.io.tmpdir</name>
              <value>${basedir}/target</value>
            </property>
            <property>
              <name>metamatrix.xatxnmgr.txnstore_dir</name>
              <value>${basedir}/target</value>
            </property>
          </systemProperties>          
        </configuration>
      </plugin>
      <!-- 
      Build a test-jar for each project, so that src/test/* resources and classes can be used
      in other projects.  Also customize how the jar files are assembled.
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <archive>
            <manifest>
              <addDefaultSpecificationEntries> true</addDefaultSpecificationEntries>
              <addDefaultImplementationEntries> true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Implementation-URL>${pom.url}</Implementation-URL>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
		  <artifactId>maven-assembly-plugin</artifactId>
		  <version>2.2-beta-2</version>        
		  <configuration>
		        <descriptors>
                    <descriptor>build/assembly/src.xml</descriptor>
                    <descriptor>build/assembly/bin.xml</descriptor>
                    <descriptor>build/assembly/embedded/embedded-jar.xml</descriptor>
                    <descriptor>build/assembly/embedded/embedded-dependencies.xml</descriptor>
                    <descriptor>build/assembly/embedded/embedded-connector-dependencies.xml</descriptor>
		            <descriptor>build/assembly/embedded/embedded-dist.xml</descriptor>
		        </descriptors>
		        <outputDirectory>target/distribution</outputDirectory>
		        <workDirectory>target/assembly/work</workDirectory>
		  </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.5</version>
      </plugin>      
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <aggregate>true</aggregate>
          <maxmemory>512m</maxmemory>      
          <excludePackageNames>*.internal:com.arjuna.*:*.connector.object:*.connector.sysadmin:*.connector.yahoo:*.connector.exec</excludePackageNames>
        </configuration>              
      </plugin>
    </plugins>
  </reporting>  
  <repositories>
    <repository>
      <id>jboss</id>
      <url>http://repository.jboss.com/maven2/</url>
    </repository>
    <repository>
      <id>jboss-snapshot</id>
      <url>http://snapshots.jboss.org/maven2</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <!--
      Declare all dependency versions and default scopes here, but not optional.
      Each module should declare it's direct dependency and possibily overwrite scope/optional.
      -->
      
      <!-- Internal dependencies -->
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-common-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-common-core</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-common-internal</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-common-internal</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-connector-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-connector-api</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-client</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-client</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-client-jdbc</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-client-jdbc</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-engine</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-engine</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-metadata</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-metadata</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-txn-jbossts</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-cache-jbosscache</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-connector-sdk</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-connector-sdk</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.federate</groupId>
        <artifactId>federate-connector-metadata</artifactId>
        <version>${project.version}</version>
      </dependency>
      
      <!-- External dependencies -->
      <dependency>
        <groupId>jdom</groupId>
        <artifactId>jdom</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>jboss.jbossts</groupId>
        <artifactId>jbossjta-integration</artifactId>
        <version>4.3.0.GA</version>
      </dependency>
      <dependency>
        <groupId>jboss.jbossts</groupId>
        <artifactId>jbossts-common</artifactId>
        <version>4.3.0.GA</version>
      </dependency>
      <dependency>
        <groupId>jboss.jbossts</groupId>
        <artifactId>jbossjta</artifactId>
        <version>4.3.0.GA</version>
      </dependency>
      <dependency>
        <groupId>javax.transaction</groupId>
        <artifactId>jta</artifactId>
        <version>1.1</version>
      </dependency>
      <dependency>
        <groupId>javax.resource</groupId>
        <artifactId>connector-api</artifactId>
        <version>1.5</version>
      </dependency>
      <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>1.2.8</version>
      </dependency>
      <dependency>
        <groupId>commons-logging</groupId>
        <artifactId>commons-logging</artifactId>
        <version>1.1</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>jgroups</groupId>
        <artifactId>jgroups</artifactId>
        <version>2.6.3.GA</version>
      </dependency>
      <dependency>
		<groupId>jboss</groupId>
   		<artifactId>jboss-cache</artifactId>
   		<version>2.0.0.GA</version>
      </dependency>
	  <dependency>
		<groupId>com.google.code.guice</groupId>
		<artifactId>guice</artifactId>
		<version>1.0</version>
	  </dependency>
      <dependency>
        <groupId>beanshell</groupId>
        <artifactId>bsh</artifactId>
        <version>2.0b4</version>
      </dependency>
      <dependency>
        <groupId>net.sf.saxon</groupId>
        <artifactId>saxon</artifactId>
        <version>8.7</version>
      </dependency>
      <dependency>
        <groupId>net.sf.saxon</groupId>
        <artifactId>saxon-dom</artifactId>
        <version>8.7</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>antlr</groupId>
        <artifactId>antlr</artifactId>
        <version>2.7.6</version>
      </dependency>
      <dependency>
        <groupId>antlr</groupId>
        <artifactId>stringtemplate</artifactId>
        <version>3.0</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>3.8.1</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.netty</groupId>
        <artifactId>netty</artifactId>
        <version>3.0.2.GA</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <modules>
    <module>federate-common-core</module>
    <module>federate-common-internal</module>
    <module>federate-connector-api</module>
    <module>federate-client</module>
    <module>federate-client-jdbc</module>
    <module>federate-engine</module>
    <module>federate-connectors</module>
    <module>federate-metadata</module>
    <module>federate-txn-jbossts</module>
    <module>federate-connector-sdk</module>
    <module>federate-console</module>
    <module>federate-server</module>
    <module>federate-soap</module>
    <module>federate-embedded</module>
    <module>federate-tools</module>
    <module>federate-tests-integration</module>
    <module>federate-connector-metadata</module>
    <module>federate-cache-jbosscache</module>
  </modules>
</project>
